--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Denis Khrushch",
   "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^8.2.2",
+    "babel-loader": "7.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
@@ -21,8 +21,5 @@
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "ldloader": "^1.0.0"
   }
 }
